--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,7 +3,7 @@ cmake_minimum_required(VERSION 3.5)
 project(Burning-Forest)
 
 add_executable(${PROJECT_NAME} main.c)
-
+set(ICON_PATH ${CMAKE_SOURCE_DIR}/assets/icon0.png)
 target_link_libraries(${PROJECT_NAME} PRIVATE
     pspdebug
     pspdisplay
@@ -11,13 +11,10 @@ target_link_libraries(${PROJECT_NAME} PRIVATE
     pspctrl
 )
 
-# Include the CreatePBP.cmake script
-include(/root/pspsdk/src/base/CreatePBP.cmake)
-
 # Create an EBOOT.PBP file
 create_pbp_file(
     TARGET ${PROJECT_NAME}
-    ICON_PATH NULL
+    ICON_PATH ${ICON_PATH}
     BACKGROUND_PATH NULL
     PREVIEW_PATH NULL
     TITLE ${PROJECT_NAME}
